2003-05-01  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* main/Makefile.in :

	  - We no longer need to link against libfl.

2003-04-29  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* docs/bnf.txt :
	* docs/bnf_program.txt :
	* docs/bnd_query.txt :

	  - Again separated program from query.

	* samples/chinese_wall :
	* samples/cwall_prog :
	* samples/cwall_query :

	  - Replaced chinese wall example with two that has the program part
	    separated from the query part.

	* common/vlad.h	:

	  - Added error code for the case where files cannot be opened for
	    reading.

	* main/vlad.cpp :

	  - Modified code to allow input from 2 files instead of one.

	* parser/Makefile.in :
	* parser/parser.h :
	* parser/program.y :
	* parser/program.l :
	* parser/query.y :
	* parser/query.l :

	  - Separated parser.y and scanner.l into program.{y,l} and query.{y,l}
	    to separate the program part from the queries.

	  - What used to go to yyout and yyerr now goes to stdout and stderr,
	    respectively.

2003-04-24  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* docs/bnf.txt :
	* docs/langspecs.txt :
	* parser/parser.y :
	* parser/scanner.l :

	  - Changed the syntax for constraints to allow us to enter a negative
	    condition (negation as failure) even without a positive one. This
	    change allows us to simplify both the syntax and to a lesser
	    extent, the parser.

	    Old syntax:

	      <exp1> implies <exp2> [with absence <exp3>]
	      always <exp2>

	    New syntax:

	      always <exp1> [implied by <exp2>] [with absence <exp3>]

2003-04-23  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/wrapper.h :
	* kb/wrapper.cpp :
	* kb/kb.cpp :

	  - Refined the wrapper api by using stdarg. This eliminates the need
	    to use the numlist in almost all cases.

	  - Cleanup.

2003-04-22  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* common/vlad.h :

	  - Added new error code: no model.

	* kb/kb.cpp :

	  - Added a few compute_*() functions for simplification.
